Fix GitHub issue #5: At KeptMap,the variable j is always 0?
Eliminate a warning in the Transformer class.